Code cleanup: Simplify running python processes